--- a/capstone-backend/package.json
+++ b/capstone-backend/package.json
@@ -11,7 +11,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "seed": "node scripts/seed.js"
+    "seed": "node scripts/seed.js",
+    "create-admin": "node scripts/createAdmin.js"
+
+
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
