--- a/capstone-backend/package.json
+++ b/capstone-backend/package.json
@@ -13,8 +13,6 @@
     "dev": "nodemon index.js",
     "seed": "node scripts/seed.js",
     "create-admin": "node scripts/createAdmin.js"
-
-
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -22,7 +20,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
