--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "mongoose": "^8.18.0"
+    "mongoose": "^8.18.0",
+    "stripe": "^18.5.0"
   }
 }
